# windows_service

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
reverse_shell/: reverse_shell.cpp  reverse_shell.h
service/: service.cpp  service_manager.cpp  service_manager.h
service_dll/: service_dll.cpp
